--- a/src/main/resources/locale/locale_da.properties
+++ b/src/main/resources/locale/locale_da.properties
@@ -44,7 +44,7 @@ Axes.Effect.0=Skull Splitter (Ability)
 Axes.Effect.1=Deal AoE Damage
 Axes.Effect.2=Critical Strikes
 Axes.Effect.3=Fordoblet Skade
-Axes.Effect.4=Axe Mastery
+Axes.Effect.4=\u00d8kse Mestring
 Axes.Effect.5=Tilf\u00f8jer bonus skade
 Axes.Effect.6=Impact
 Axes.Effect.7=Strike with enough force to shatter armor
@@ -88,16 +88,6 @@ Fishing.Listener=Fishing:
 Fishing.MagicFound=[[GRAY]]You feel a touch of magic with this catch...
 Fishing.SkillName=FISHING
 Fishing.Skillup=[[YELLOW]]Fishing skill increased by {0}. Total ({1})
-Herbalism.Ability.0=Green Terra (ABILITY)
-Herbalism.Ability.1=Spread the Terra, 3x Drops
-Herbalism.Ability.2=Green Thumb (Wheat)
-Herbalism.Ability.3=Auto-Plants wheat when harvesting
-Herbalism.Ability.4=Green Thumb (Cobble/Stone Brick)
-Herbalism.Ability.5=Cobblestone/Stone Brick -> Mossy w/ Seeds
-Herbalism.Ability.6=Farmer\'s Diet
-Herbalism.Ability.7=Improves hunger restored from farmed foods
-Herbalism.Ability.8=Double Drops (All Herbs)
-Herbalism.Ability.9=Double the normal loot
 Herbalism.Ability.DoubleDropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}%
 Herbalism.Ability.FD=[[RED]]Farmers Diet: [[YELLOW]]Rank {0}
 Herbalism.Ability.GTe.Length=[[RED]]Green Terra Length: [[YELLOW]]{0}s
@@ -107,6 +97,16 @@ Herbalism.Ability.GTh.Stage=[[RED]]Green Thumb Stage: [[YELLOW]] Wheat grows in 
 Herbalism.Ability.GTh=[[GREEN]]**GR\u00d8NNE FINGRE**
 Herbalism.Ability.Lower=[[GRAY]]**YOU LOWER YOUR HOE**
 Herbalism.Ability.Ready=[[GREEN]]**YOU READY YOUR HOE**
+Herbalism.Effect.0=Green Terra (ABILITY)
+Herbalism.Effect.1=Spread the Terra, 3x Drops
+Herbalism.Effect.2=Green Thumb (Wheat)
+Herbalism.Effect.3=Auto-Plants wheat when harvesting
+Herbalism.Effect.4=Green Thumb (Cobble/Stone Brick)
+Herbalism.Effect.5=Cobblestone/Stone Brick -> Mossy w/ Seeds
+Herbalism.Effect.6=Farmer\'s Diet
+Herbalism.Effect.7=Improves hunger restored from farmed foods
+Herbalism.Effect.8=Double Drops (All Herbs)
+Herbalism.Effect.9=Double the normal loot
 Herbalism.Listener=Urtekundskab
 Herbalism.SkillName=NATURMEDICIN
 Herbalism.Skills.GTe.Off=[[RED]]**Green Terra has worn off**
@@ -115,22 +115,22 @@ Herbalism.Skills.GTe.Refresh=[[GREEN]]Your [[YELLOW]]Green Terra [[GREEN]]abilit
 Herbalism.Skills.GTe.Other.Off=[[RED]]Green Terra[[GREEN]] has worn off for [[YELLOW]]{0}
 Herbalism.Skills.GTe.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Green Terra!
 Herbalism.Skillup=[[YELLOW]]Herbalism skill increased by {0}. Total ({1})
-Mining.Ability.0=Super Breaker (ABILITY)
-Mining.Ability.1=Speed+, Triple Drop Chance
-Mining.Ability.2=Double Drops
-Mining.Ability.3=Double the normal loot
-Mining.Ability.4=Blast Mining
-Mining.Ability.5=Bonuses to mining with TNT
-Mining.Ability.6=Bigger Bombs
-Mining.Ability.7=Increases TNT explosion radius
-Mining.Ability.8=Demolitions Expertise
-Mining.Ability.9=Decreases damage from TNT explosions
 Mining.Ability.Length=[[RED]]Super Breaker Length: [[YELLOW]]{0}s
 Mining.Ability.Locked.0=LOCKED UNTIL 125+ SKILL (BLAST MINING)
 Mining.Ability.Locked.1=LOCKED UNTIL 250+ SKILL (BIGGER BOMBS)
 Mining.Ability.Locked.2=LOCKED UNTIL 500+ SKILL (DEMOLITIONS EXPERTISE)
 Mining.Ability.Lower=[[GRAY]]**DU S\u00c6NKER DIN HAKKE**
 Mining.Ability.Ready=[[GREEN]]**DU G\u00d8R DIN HAKKE KLAR**
+Mining.Effect.0=Super Breaker (ABILITY)
+Mining.Effect.1=Speed+, Triple Drop Chance
+Mining.Effect.2=Double Drops
+Mining.Effect.3=Double the normal loot
+Mining.Effect.4=Blast Mining
+Mining.Effect.5=Bonuses to mining with TNT
+Mining.Effect.6=Bigger Bombs
+Mining.Effect.7=Increases TNT explosion radius
+Mining.Effect.8=Demolitions Expertise
+Mining.Effect.9=Decreases damage from TNT explosions
 Mining.Effect.Decrease=[[RED]]Demolitions Expert Damage Decrease: [[YELLOW]]{0}%
 Mining.Effect.DropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}%
 Mining.Listener=Minedrift:
@@ -217,7 +217,7 @@ Taming.Ability.Bonus.0=Environmentally Aware
 Taming.Ability.Bonus.1=Wolves avoid danger
 Taming.Ability.Bonus.2=Tyk Pels
 Taming.Ability.Bonus.3=1/2 Damage, Fire Resistance
-Taming.Ability.Bonus.4=St\u00f8d Sikker
+Taming.Ability.Bonus.4=Shock Proof
 Taming.Ability.Bonus.5=Eksplosioner g\u00f8r 1/6 af den normale skade
 Taming.Ability.Bonus.6=Sk\u00e6rpet Kl\u00f8er
 Taming.Ability.Bonus.7=+2 Skade
@@ -241,11 +241,11 @@ Taming.Effect.16=Fast Food Service
 Taming.Effect.17=Chance for wolves to heal on attack
 Taming.Effect.2=Gore
 Taming.Effect.3=Critical Strike that applies Bleed
-Taming.Effect.4=Sharpened Claws
+Taming.Effect.4=Sk\u00e6rpet Kl\u00f8er
 Taming.Effect.5=Damage Bonus
 Taming.Effect.6=Environmentally Aware
 Taming.Effect.7=Cactus/Lava Phobia, Fall DMG Immune
-Taming.Effect.8=Thick Fur
+Taming.Effect.8=Tyk Pels
 Taming.Effect.9=DMG Reduction, Fire Resistance
 Taming.Listener.Wolf=[[DARK_GRAY]]Din ulv smutter tilbage til dig...
 Taming.Listener=T\u00e6mning:
@@ -284,7 +284,7 @@ Woodcutting.Ability.Length=[[RED]]Tree Feller Length: [[YELLOW]]{0}s
 Woodcutting.Ability.Locked.0=L\u00c5ST INDTIL 100+ I F\u00c6RDIGHED (BLAD BL\u00c6SER)
 Woodcutting.Effect.0=Tree Feller (ABILITY)
 Woodcutting.Effect.1=Make trees explode
-Woodcutting.Effect.2=Leaf Blower
+Woodcutting.Effect.2=Blad Bl\u00e6ser
 Woodcutting.Effect.3=Blow Away Leaves
 Woodcutting.Effect.4=Double Drops
 Woodcutting.Effect.5=Double the normal loot
@@ -412,16 +412,16 @@ Effects.Level=[[DARK_GRAY]]LVL: [[GREEN]]{0} [[DARK_AQUA]]XP[[YELLOW]]([[GOLD]]{
 Effects.Template=[[DARK_AQUA]]{0}: [[GREEN]]{1}
 Guides.Acrobatics=[[DARK_AQUA]]About Acrobatics:\n[[YELLOW]]Acrobatics is the art of moving gracefully in mcMMO.\n[[YELLOW]]It provides combat bonuses and environment damage bonuses.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you need to perform a dodge\n[[YELLOW]]in combat or survive falls from heights that damage you.\n\n[[DARK_AQUA]]How does Rolling work?\n[[YELLOW]]You have a passive chance when you take fall damage\n[[YELLOW]]to negate the damage done. You can hold the sneak button to\n[[YELLOW]]double your chances during the fall.\n[[YELLOW]]This triggers a Graceful Roll instead of a standard one.\n[[YELLOW]]Graceful Rolls are like regular rolls but are twice as likely to\n[[YELLOW]]occur and provide more damage safety than regular rolls.\n[[YELLOW]]Rolling chance is tied to your skill level\n[[DARK_AQUA]]How does Dodge work?\n[[YELLOW]]Dodge is a passive chance when you are\n[YELLOW]]injured in combat to halve the damage taken.\n[[YELLOW]]It is tied to your skill level.
 Guides.Archery=Vejledning kommer snart...
-Guides.Axes=Guide coming soon...
+Guides.Axes=Vejledning kommer snart...
 Guides.Excavation=[[DARK_AQUA]]About Excavation:\n[[YELLOW]]Excavation is the act of digging up dirt to find treasures.\n[[YELLOW]]By excavating the land you will find treasures.\n[[YELLOW]]The more you do this the more treasures you can find.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you must dig with a shovel in hand.\n[[YELLOW]]Only certain materials can be dug up for treasures and XP.\n[[DARK_AQUA]]Compatible Materials:\n[[YELLOW]]Grass, Dirt, Sand, Clay, Gravel, Mycelium, Soul Sand\n\n[[DARK_AQUA]]How to use Giga Drill Breaker:\n[[YELLOW]]With a shovel in hand right click to ready your tool.\n[[YELLOW]]Once in this state you have about 4 seconds to make\n[[YELLOW]]contact with Excavation compatible materials this will\n[[YELLOW]]activate Giga Drill Breaker.\n[[DARK_AQUA]]What is Giga Drill Breaker?\n[[YELLOW]]Giga Drill Breaker is an ability with a cooldown\n[[YELLOW]]tied to Excavation skill. It triples your chance\n[[YELLOW]]of finding treasures and enables instant break\n[[YELLOW]]on Excavation materials.\n\n[[DARK_AQUA]]How does Treasure Hunter work?\n[[YELLOW]]Every possible treasure for Excavation has its own\n[[YELLOW]]skill level requirement for it to drop, as a result it\'s\n[[YELLOW]]difficult to say how much it is helping you.\n[[YELLOW]]Just keep in mind that the higher your Excavation skill\n[[YELLOW]]is, the more treasures that can be found.\n[[YELLOW]]And also keep in mind that each type of Excavation\n[[YELLOW]]compatible material has its own unique list of treasures.\n[[YELLOW]]In other words you will find different treasures in Dirt\n[[YELLOW]]than you would in Gravel.\n[[DARK_AQUA]]Notes about Excavation:\n[[YELLOW]]Excavation drops are completely customizeable\n[[YELLOW]]So results vary server to server.
-Guides.Fishing=Guide coming soon...
-Guides.Herbalism=Guide coming soon...
+Guides.Fishing=Vejledning kommer snart...
+Guides.Herbalism=Vejledning kommer snart...
 Guides.Mining=[[DARK_AQUA]]About Mining:\n[[YELLOW]]Mining consists of mining stone and ores. It provides bonuses\n[[YELLOW]]to the amount of materials dropped while mining.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill, you must mine with a pickaxe in hand.\n[[YELLOW]]Only certain blocks award XP.\n\n[[DARK_AQUA]]Compatible Materials:\n[[YELLOW]]Stone, Coal Ore, Iron Ore, Gold Ore, Diamond Ore, Redstone Ore,\n[[YELLOW]]Lapis Ore, Obsidian, Mossy Cobblestone, Ender Stone,\n[[YELLOW]]Glowstone, and Netherrack.\n\n[[DARK_AQUA]]How to use Super Breaker:\n[[YELLOW]]With a pickaxe in your hand, right click to ready your tool.\n[[YELLOW]]Once in this state, you have about 4 seconds to make contact\n[[YELLOW]]with Mining compatible materials, which will activate Super\n[[YELLOW]]Breaker.\n\n[[DARK_AQUA]]What is Super Breaker?\n[[YELLOW]]Super Breaker is an ability with a cooldown tied to the Mining\n[[YELLOW]]skill. It triples your chance of extra items dropping and\n[[YELLOW]]enables instant break on Mining materials.\n\n[[DARK_AQUA]]How to use Blast Mining:\n[[YELLOW]]With a detonator in hand, which is a flint & steel by default,\n[[YELLOW]]right-click on TNT from a distance. This will cause the TNT\n[[YELLOW]]to instantly explode.\n\n[[DARK_AQUA]]How does Blast Mining work?\n[[YELLOW]]Blast Mining is an ability with a cooldown tied to the Mining\n[[YELLOW]]skill. It gives bonuses when mining with TNT and allows you\n[[YELLOW]]to remote detonate TNT. There are three parts to Blast Mining.\n[[YELLOW]]The first part is Bigger Bombs, which increases blast radius.\n[[YELLOW]]The second is Demolitions Expert, which decreases damage\n[[YELLOW]]from TNT explosions. The third part simply increases the\n[[YELLOW]]amount of ores dropped from TNT and decreases the\n[[YELLOW]]debris dropped.
-Guides.Repair=Guide coming soon...
+Guides.Repair=Vejledning kommer snart...
 Guides.Swords=Vejledning kommer snart...
 Guides.Taming=Vejledning kommer snart...
-Guides.Unarmed=Guide coming soon...
-Guides.Woodcutting=Guide coming soon...
+Guides.Unarmed=Vejledning kommer snart...
+Guides.Woodcutting=Vejledning kommer snart...
 Inspect.Offline=[[RED]]That player is offline, inspecting offline players is limited to Ops!
 Inspect.OfflineStats=mcMMO Stats for Offline Player [[YELLOW]]{0}
 Inspect.Stats=[[GREEN]]mcMMO Stats for [[YELLOW]]{0}
