--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -44,7 +44,7 @@ Axes.Effect.0=Sch\u00e4delspalter (F\u00e4higkeit)
 Axes.Effect.1=Deal AoE Damage
 Axes.Effect.2=Kritische Treffer
 Axes.Effect.3=Doppelter Schaden
-Axes.Effect.4=Axtbeherrschung
+Axes.Effect.4=Axt Beherrschung
 Axes.Effect.5=F\u00fcgt zus\u00e4tzlichen Schaden hinzu
 Axes.Effect.6=Wucht
 Axes.Effect.7=Strike with enough force to shatter armor
@@ -88,16 +88,6 @@ Fishing.Listener=Fishing:
 Fishing.MagicFound=[[AQUA]]Du hast etwas magisches gefunden...
 Fishing.SkillName=FISHING
 Fishing.Skillup=[[YELLOW]]Fishing skill increased by {0}. Total ({1})
-Herbalism.Ability.0=Green Terra (ABILITY)
-Herbalism.Ability.1=Spread the Terra, 3x Drops
-Herbalism.Ability.2=Green Thumb (Wheat)
-Herbalism.Ability.3=Auto-Plants wheat when harvesting
-Herbalism.Ability.4=Green Thumb (Cobble/Stone Brick)
-Herbalism.Ability.5=Cobblestone/Stone Brick -> Mossy w/ Seeds
-Herbalism.Ability.6=Farmer\'s Diet
-Herbalism.Ability.7=Improves hunger restored from farmed foods
-Herbalism.Ability.8=Double Drops (All Herbs)
-Herbalism.Ability.9=Double the normal loot
 Herbalism.Ability.DoubleDropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}%
 Herbalism.Ability.FD=[[RED]]Farmers Diet: [[YELLOW]]Rank {0}
 Herbalism.Ability.GTe.Length=[[RED]]Green Terra Length: [[YELLOW]]{0}s
@@ -107,6 +97,16 @@ Herbalism.Ability.GTh.Stage=[[RED]]Green Thumb Stage: [[YELLOW]] Wheat grows in 
 Herbalism.Ability.GTh=[[GREEN]]**GREEN THUMB**
 Herbalism.Ability.Lower=[[GRAY]]**YOU LOWER YOUR HOE**
 Herbalism.Ability.Ready=[[GREEN]]**YOU READY YOUR HOE**
+Herbalism.Effect.0=Green Terra (ABILITY)
+Herbalism.Effect.1=Spread the Terra, 3x Drops
+Herbalism.Effect.2=Green Thumb (Wheat)
+Herbalism.Effect.3=Auto-Plants wheat when harvesting
+Herbalism.Effect.4=Green Thumb (Cobble/Stone Brick)
+Herbalism.Effect.5=Cobblestone/Stone Brick -> Mossy w/ Seeds
+Herbalism.Effect.6=Farmer\'s Diet
+Herbalism.Effect.7=Improves hunger restored from farmed foods
+Herbalism.Effect.8=Double Drops (All Herbs)
+Herbalism.Effect.9=Verdoppelt die normale Ausbeute
 Herbalism.Listener=Kr\u00e4uterkunde:
 Herbalism.SkillName=KR\u00c4UTERKUNDE
 Herbalism.Skills.GTe.Off=[[RED]]**Green Terra has worn off**
@@ -115,22 +115,22 @@ Herbalism.Skills.GTe.Refresh=[[GREEN]]Your [[YELLOW]]Green Terra [[GREEN]]abilit
 Herbalism.Skills.GTe.Other.Off=[[RED]]Green Terra[[GREEN]] has worn off for [[YELLOW]]{0}
 Herbalism.Skills.GTe.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Green Terra!
 Herbalism.Skillup=[[YELLOW]]Kr\u00e4uterkunde Fertigkeit ist um {0} gestiegen. Gesamt ({1})
-Mining.Ability.0=Super Breaker (ABILITY)
-Mining.Ability.1=Speed+, Triple Drop Chance
-Mining.Ability.2=Double Drops
-Mining.Ability.3=Double the normal loot
-Mining.Ability.4=Blast Mining
-Mining.Ability.5=Bonuses to mining with TNT
-Mining.Ability.6=Bigger Bombs
-Mining.Ability.7=Increases TNT explosion radius
-Mining.Ability.8=Demolitions Expertise
-Mining.Ability.9=Decreases damage from TNT explosions
 Mining.Ability.Length=[[RED]]Super Breaker Length: [[YELLOW]]{0}s
 Mining.Ability.Locked.0=LOCKED UNTIL 125+ SKILL (BLAST MINING)
 Mining.Ability.Locked.1=LOCKED UNTIL 250+ SKILL (BIGGER BOMBS)
 Mining.Ability.Locked.2=LOCKED UNTIL 500+ SKILL (DEMOLITIONS EXPERTISE)
 Mining.Ability.Lower=[[GRAY]]**YOU LOWER YOUR PICKAXE**
 Mining.Ability.Ready=[[GREEN]]**DU Z\u00dcCKST DEINE SPITZHACKE**
+Mining.Effect.0=Super Breaker (ABILITY)
+Mining.Effect.1=Speed+, Triple Drop Chance
+Mining.Effect.2=Doppelte Ausbeute
+Mining.Effect.3=Verdoppelt die normale Ausbeute
+Mining.Effect.4=Blast Mining
+Mining.Effect.5=Bonuses to mining with TNT
+Mining.Effect.6=Bigger Bombs
+Mining.Effect.7=Increases TNT explosion radius
+Mining.Effect.8=Demolitions Expertise
+Mining.Effect.9=Decreases damage from TNT explosions
 Mining.Effect.Decrease=[[RED]]Demolitions Expert Damage Decrease: [[YELLOW]]{0}%
 Mining.Effect.DropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}%
 Mining.Listener=Bergbau:
@@ -284,7 +284,7 @@ Woodcutting.Ability.Length=[[RED]]Tree Feller Length: [[YELLOW]]{0}s
 Woodcutting.Ability.Locked.0=Gesperrt bis deine Fertigkeit 100+ erreicht hat (Laubbl\u00e4ser)
 Woodcutting.Effect.0=Baumf\u00e4ller (F\u00e4higkeit)
 Woodcutting.Effect.1=Make trees explode
-Woodcutting.Effect.2=Leaf Blower
+Woodcutting.Effect.2=Laubbl\u00e4ser
 Woodcutting.Effect.3=Blow Away Leaves
 Woodcutting.Effect.4=Doppelte Ausbeute
 Woodcutting.Effect.5=Verdoppelt die normale Ausbeute
@@ -386,8 +386,8 @@ Party.Teleport.Player=[[GREEN]]You have teleported to {0}.
 Party.Teleport.Target=[[GREEN]]{0} has teleported to you.
 Party.Unlocked=[[AQUA]]Gruppe entsperrt
 Commands.XPGain.Acrobatics=Falling
-Commands.XPGain.Archery=Attacking Monsters
-Commands.XPGain.Axes=Attacking Monsters
+Commands.XPGain.Archery=Monster angreifen
+Commands.XPGain.Axes=Monster angreifen
 Commands.XPGain.Excavation=Graben und Sch\u00e4tze finden
 Commands.XPGain.Fishing=Fishing (Go figure!)
 Commands.XPGain.Herbalism=Kr\u00e4uter sammeln
@@ -395,7 +395,7 @@ Commands.XPGain.Mining=Stein und Erz abbauen
 Commands.XPGain.Repair=Repairing
 Commands.XPGain.Swords=Monster angreifen
 Commands.XPGain.Taming=Tierz\u00e4hmung oder Kampf mit W\u00f6lfen
-Commands.XPGain.Unarmed=Attacking Monsters
+Commands.XPGain.Unarmed=Monster angreifen
 Commands.XPGain.WoodCutting=Chopping down trees
 Commands.XPGain=[[DARK_GRAY]]XP Gewinn: [[WHITE]]{0}
 Commands.xplock.locked=[[YELLOW]]Deine XP BAR ist nun auf {0} gesperrt!
