--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -44,10 +44,10 @@ Axes.Effect.0=Parte Cr\u00e1neos (HABILIDAD)
 Axes.Effect.1=Distribuir Da\u00f1o en el \u00c1rea de Cobertura
 Axes.Effect.2=Golpes Cr\u00edticos
 Axes.Effect.3=Da\u00f1o Doble
-Axes.Effect.4=Maestr\u00eda del Hacha
+Axes.Effect.4=Dominio del Hacha
 Axes.Effect.5=Agrega da\u00f1o bonus
 Axes.Effect.6=Impacto
-Axes.Effect.7=Golpear con la fuerza necesaria como para destruir armaduras
+Axes.Effect.7=Golpear con fuerza como para destruir armaduras
 Axes.Effect.8=Gran Impacto
 Axes.Effect.9=Hacer da\u00f1o bonus a los enemigos sin armadura
 Axes.Listener=Hachas:
@@ -68,7 +68,7 @@ Excavation.Effect.Length=[[RED]]Duraci\u00f3n de Ultra Taladro Destructor: [[YEL
 Excavation.Listener=Excavaci\u00f3n:
 Excavation.SkillName=EXCAVACI\u00d3N
 Excavation.Skills.GigaDrillBreaker.Off=[[RED]]**Ultra Taladro Destructor ha expirado**
-Excavation.Skills.GigaDrillBreaker.On=[[GREEN]]**ULTRA TALADRO DESTRUCTOR ACTIVADO**
+Excavation.Skills.GigaDrillBreaker.On=[[GREEN]]**GIGA DRILL BREAKER ACTIVADO**
 Excavation.Skills.GigaDrillBreaker.Refresh=[[GREEN]]\u00a1Tu habilidad de [[YELLOW]]Ultra Taladro Destructor [[GREEN]]fue refrescada!
 Excavation.Skills.GigaDrillBreaker.Other.Off=[[RED]]Ultra Taladro Destructor[[GREEN]] le ha expirado a [[YELLOW]]{0}
 Excavation.Skills.GigaDrillBreaker.Other.On=[[GREEN]]\u00a1{0}[[DARK_GREEN]] us\u00f3 [[RED]]Ultra Taladro Destructor!
@@ -78,26 +78,16 @@ Fishing.Ability.Locked.0=BLOQUEADO HASTA HABILIDAD 150+ (SACUDIDA)
 Fishing.Ability.Rank=[[RED]]Cazador de Tesoros: [[YELLOW]]Rango {0}/5
 Fishing.Ability.Shake=[[RED]]Sacudida: [[YELLOW]]Arrancar items de monstruos, mutilandolos en el proceso.
 Fishing.Effect.0=Cazador de Tesoros (Pasivo)
-Fishing.Effect.1=Pescar objetos varios
+Fishing.Effect.1=Pescar objetos miscel\u00e1neos
 Fishing.Effect.2=Cazador M\u00e1gico
 Fishing.Effect.3=Encuentra Objetos Encantados
 Fishing.Effect.4=Sacudir (contra Entidades)
 Fishing.Effect.5=Sacudir los items fuera de los monstruos con la ca\u00f1a de pescar
 Fishing.ItemFound=[[GRAY]]\u00a1Tesoro encontrado!
 Fishing.Listener=Pescador:
-Fishing.MagicFound=[[GRAY]]You feel a touch of magic with this catch...
+Fishing.MagicFound=[[GRAY]]Sientes un toque de magia con esta pesca...
 Fishing.SkillName=PESCADOR
 Fishing.Skillup=[[YELLOW]]Habilidad de Pescador incrementada en {0}. Total ({1})
-Herbalism.Ability.0=Tierra Verde (HABILIDAD)
-Herbalism.Ability.1=Arar la Tierra, Triple Drops
-Herbalism.Ability.2=Pulgar Verde (Trigo)
-Herbalism.Ability.3=Planta trigo autom\u00e1ticamente al recolectar
-Herbalism.Ability.4=Pulgar Verde (Roca/Ladrillo de Piedra)
-Herbalism.Ability.5=Roca/Ladrillo de Piedra -> Mohoso usando Semillas
-Herbalism.Ability.6=Dieta del Granjero
-Herbalism.Ability.7=Aumenta el hambre restaurada por la comida cultivada
-Herbalism.Ability.8=Doble Drops (Todas las Hierbas)
-Herbalism.Ability.9=El doble del bot\u00edn normal
 Herbalism.Ability.DoubleDropChance=[[RED]]Probabilidad de Doble Drop: [[YELLOW]]{0}%
 Herbalism.Ability.FD=[[RED]]Dieta del Granjero: [[YELLOW]]Rango {0}
 Herbalism.Ability.GTe.Length=[[RED]]Green Terra Length: [[YELLOW]]{0}s
@@ -107,6 +97,16 @@ Herbalism.Ability.GTh.Stage=[[RED]]Etapa de Pulgar Verde: [[YELLOW]]El trigo cre
 Herbalism.Ability.GTh=[[GREEN]]**PULGAR VERDE**
 Herbalism.Ability.Lower=[[GRAY]]**BAJAS TU AZADA**
 Herbalism.Ability.Ready=[[GREEN]]**PREPARASTE TU AZADA**
+Herbalism.Effect.0=Tierra Verde (HABILIDAD)
+Herbalism.Effect.1=Arar la Tierra, Triple Drops
+Herbalism.Effect.2=Pulgar Verde (Trigo)
+Herbalism.Effect.3=Planta trigo autom\u00e1ticamente al recolectar
+Herbalism.Effect.4=Pulgar Verde (Roca/Ladrillo de Piedra)
+Herbalism.Effect.5=Roca/Ladrillo de Piedra -> Mohoso usando Semillas
+Herbalism.Effect.6=Dieta del Granjero
+Herbalism.Effect.7=Aumenta el hambre restaurada por la comida cultivada
+Herbalism.Effect.8=Doble Drops (Todas las Hierbas)
+Herbalism.Effect.9=El doble del bot\u00edn normal
 Herbalism.Listener=Herbalismo:
 Herbalism.SkillName=HERBALISMO
 Herbalism.Skills.GTe.Off=[[RED]]**Tierra Verde ha expirado**
@@ -115,24 +115,24 @@ Herbalism.Skills.GTe.Refresh=[[GREEN]]\u00a1Tu habilidad [[YELLOW]]Tierra Verde 
 Herbalism.Skills.GTe.Other.Off=[[RED]]Tierra Verde[[GREEN]] le ha expirado a [[YELLOW]]{0}
 Herbalism.Skills.GTe.Other.On=[[GREEN]]\u00a1{0}[[DARK_GREEN]] us\u00f3 [[RED]]Tierra Verde!
 Herbalism.Skillup=[[YELLOW]]Habilidad de Herbalismo incrementada en {0}. Total ({1})
-Mining.Ability.0=S\u00faper Destructor (HABILIDAD)
-Mining.Ability.1=Aumento de Velocidad, Probabilidad de Triple Drop
-Mining.Ability.2=Doble Drops
-Mining.Ability.3=El doble del bot\u00edn normal
-Mining.Ability.4=Miner\u00eda Explosiva
-Mining.Ability.5=Bonuses a la miner\u00eda con TNT
-Mining.Ability.6=Mayores Bombas
-Mining.Ability.7=Incrementa el radio de la explosi\u00f3n de TNT
-Mining.Ability.8=Experto en Demoliciones
-Mining.Ability.9=Reduce el da\u00f1o de las explosiones de TNT
 Mining.Ability.Length=[[RED]]Duraci\u00f3n de Super Destructor: [[YELLOW]]{0}seg
 Mining.Ability.Locked.0=BLOQUEADO HASTA HABILIDAD 125+ (MINER\u00cdA EXPLOSIVA)
-Mining.Ability.Locked.1=BLOQUEADO HASTA HABILIDAD 250+ (MAYORES BOMBAS)
+Mining.Ability.Locked.1=BLOQUEADO HASTA 250+ SKILL (MAYORES BOMBAS)
 Mining.Ability.Locked.2=BLOQUEADO HASTA HABILIDAD 500+ (EXPERTO EN DEMOLICI\u00d3N)
 Mining.Ability.Lower=[[GRAY]]**BAJASTE TU PICO**
 Mining.Ability.Ready=[[GREEN]]**PREPARAS TU PICO**
+Mining.Effect.0=S\u00faper Destructor (HABILIDAD)
+Mining.Effect.1=Aumento de Velocidad, Probabilidad de Triple Drop
+Mining.Effect.2=Doble Drops
+Mining.Effect.3=El doble del bot\u00edn normal
+Mining.Effect.4=Miner\u00eda Explosiva
+Mining.Effect.5=Bonuses a la miner\u00eda con TNT
+Mining.Effect.6=Mayores Bombas
+Mining.Effect.7=Incrementa el radio de la explosi\u00f3n de TNT
+Mining.Effect.8=Experto en Demoliciones
+Mining.Effect.9=Reduce el da\u00f1o de las explosiones de TNT
 Mining.Effect.Decrease=[[RED]]Da\u00f1o Disminuido por Experto en Demoliciones: [[YELLOW]]{0}%
-Mining.Effect.DropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}%
+Mining.Effect.DropChance=[[RED]]Probabilidad de Doble Drop: [[YELLOW]]{0}%
 Mining.Listener=Miner\u00eda:
 Mining.SkillName=MINER\u00cdA
 Mining.Skills.SuperBreaker.Off=[[RED]]**S\u00faper Destructor ha expirado**
@@ -212,7 +212,7 @@ Swords.Skills.SS.Refresh=[[GREEN]]\u00a1Tu habilidad de [[YELLOW]]Golpe Dentado 
 Swords.Skills.SS.Other.Off=[[RED]]Ataque Dentado[[GREEN]] le ha expirado a [[YELLOW]]{0}
 Swords.Skills.SS.Other.On=[[GREEN]]\u00a1{0}[[DARK_GREEN]] us\u00f3 [[RED]]Ataque Dentado!
 Swords.SkillUp=[[YELLOW]]Habilidad de Espadas incrementada en {0}. Total ({1})
-Swords.SS.Length=[[RED]]Duraci\u00f3n del Ataque Dentado: [[YELLOW]]{0}seg
+Swords.SS.Length=[[RED]]Duraci\u00f3n del Ataque Dentado: [[YELLOW]]{0}s
 Taming.Ability.Bonus.0=Consciente del Entorno
 Taming.Ability.Bonus.1=Lobos evitan peligros
 Taming.Ability.Bonus.2=Piel Gruesa
@@ -223,11 +223,11 @@ Taming.Ability.Bonus.6=Garras Afiladas
 Taming.Ability.Bonus.7=+2 de Da\u00f1o
 Taming.Ability.Bonus.8=Servicio de Comida R\u00e1pida
 Taming.Ability.Bonus.9=50% de probabilidad de curarse en ataque
-Taming.Ability.Locked.0=BLOQUEADO HASTA HABILIDAD 100+ (CONSCIENTE DEL ENTORNO)
-Taming.Ability.Locked.1=BLOQUEADO HASTA HABILIDAD 250+ (PIEL GRUESA)
-Taming.Ability.Locked.2=BLOQUEADO HASTA HABILIDAD 500+ (A PRUEBA DE GOLPES)
-Taming.Ability.Locked.3=BLOQUEADO HASTA HABILIDAD 750+ (GARRAS AFILADAS)
-Taming.Ability.Locked.4=BLOQUEADO HASTA HABILIDAD 50+ (SERVICIO DE COMIDA R\u00c1PIDA)
+Taming.Ability.Locked.0=BLOQUEADO HASTA 100+ SKILL (CONSCIENTE DEL ENTORNO)
+Taming.Ability.Locked.1=BLOQUEADO HASTA 250+ SKILL (PIEL GRUESA)
+Taming.Ability.Locked.2=BLOQUEADO HASTA 500+ SKILL (A PRUEBA DE GOLPES)
+Taming.Ability.Locked.3=BLOQUEADO HASTA 750+ SKILL (GARRAS AFILADAS)
+Taming.Ability.Locked.4=BLOQUEADO HASTA 50+ SKILL (SERVICIO DE COMIDA R\u00c1PIDA)
 Taming.Combat.Chance.Gore=[[RED]]Probabilidad de Mordisco: [[YELLOW]]{0}%
 Taming.Effect.0=Conocimiento de la Bestia
 Taming.Effect.1=Golpear con un hueso para inspeccionar lobos u ocelotes
@@ -237,7 +237,7 @@ Taming.Effect.12=Llamado a la Naturaleza
 Taming.Effect.13=Convocar a un animal a tu lado
 Taming.Effect.14=[[GRAY]]COTW (Ocelot): Crouch and left-click with {0} Fish in hand
 Taming.Effect.15=[[GRAY]]COTW (Wolf): Crouch and left-click with {0} Bones in hand
-Taming.Effect.16=Fast Food Service
+Taming.Effect.16=Servicio de Comida R\u00e1pida
 Taming.Effect.17=Chance for wolves to heal on attack
 Taming.Effect.2=Mordisco
 Taming.Effect.3=Golpe Cr\u00edtico que aplica Sangrado
@@ -255,8 +255,8 @@ Taming.Summon.Complete=[[GREEN]]Invocaci\u00f3n completada
 Taming.Summon.Fail.Ocelot=[[RED]]Tienes demasiados ocelotes cerca como para convocar m\u00e1s.
 Taming.Summon.Fail.Wolf=[[RED]]Tienes demasiados lobos cerca como para convocar m\u00e1s.
 Unarmed.Ability.Berserk.Length=[[RED]]Berserk Length: [[YELLOW]]{0}s
-Unarmed.Ability.Bonus.0=Estilo Pu\u00f1o de Hierro
-Unarmed.Ability.Bonus.1=+{0} Mejora de Da\u00f1o
+Unarmed.Ability.Bonus.0=Estilo del Pu\u00f1o de Hierro
+Unarmed.Ability.Bonus.1=+{0} Mejora de DA\u00d1O
 Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Probabilidad de Desv\u00edo de Flechas: [[YELLOW]]{0}%
 Unarmed.Ability.Chance.Disarm=[[RED]]Probabilidad de Desarmar: [[YELLOW]]{0}%
 Unarmed.Ability.Lower=[[GRAY]]**BAJAS TUS PU\u00d1OS**
@@ -265,7 +265,7 @@ Unarmed.Effect.0=Enloquecido (HABILIDAD)
 Unarmed.Effect.1=+50% de Da\u00f1o, Rompe materiales d\u00e9biles
 Unarmed.Effect.2=Desarmar (Jugadores)
 Unarmed.Effect.3=Hace soltar el item que un enemigo lleva en la mano
-Unarmed.Effect.4=Estilo Pu\u00f1o de Hierro
+Unarmed.Effect.4=Estilo del Pu\u00f1o de Hierro
 Unarmed.Effect.5=Endurece su brazo con el tiempo
 Unarmed.Effect.6=Flecha Desviada
 Unarmed.Effect.7=Desviar flechas
@@ -305,11 +305,11 @@ Combat.ArrowDeflect=[[WHITE]]**FLECHA DESVIADA**
 Combat.BeastLore=[[GREEN]]**CONOCIMIENTO DE LA BESTIA**
 Combat.BeastLoreHealth=[[DARK_AQUA]]Salud ([[GREEN]]{0}[[DARK_AQUA]]/{1})
 Combat.BeastLoreOwner=[[DARK_AQUA]]Due\u00f1o ([[RED]]{0}[[DARK_AQUA]])
-Combat.BurningArrowHit=[[DARK_RED]]\u00a1Fuiste golpeado por una flecha en llamas!
+Combat.BurningArrowHit=[[DARK_RED]]Has sido golpeado por una flecha ardiendo\\!
 Combat.Gore=[[GREEN]]**MORDISCO**
 Combat.Ignition=[[RED]]**IGNICION**
 Combat.StruckByGore=[[RED]]**FUISTE MORDISQUEADO**
-Combat.TargetDazed=El objetivo fue [[DARK_RED]]Aturdido
+Combat.TargetDazed=El objetivo fue [[DARK_RED]]aturdido
 Combat.TouchedFuzzy=[[DARK_RED]]Est\u00e1s confuso. Te sientes mareado.
 mcMMO.Description=[[DARK_AQUA]]About the [[YELLOW]]mcMMO[[DARK_AQUA]] Project:,[[GOLD]]mcMMO is an [[RED]]open source[[GOLD]] RPG mod created in February 2011,[[GOLD]]by [[BLUE]]nossr50[[GOLD]]. The goal is to provide a quality RPG experience.,[[DARK_AQUA]]Tips:,[[GOLD]] - [[GREEN]]Use [[RED]]/mcc[[GREEN]] to see commands,[[GOLD]] - [[GREEN]]Type [[RED]]/SKILLNAME[[GREEN]] to see detailed skill info,[[DARK_AQUA]]Developers:,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Project Lead),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Senior Developer),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Developer),,[[GOLD]] - [[GREEN]]bm01 [[BLUE]](Developer),[[DARK_AQUA]]Useful Links:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Bug Reporting,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC Chat,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Bukkit Forum Thread
 Commands.Ability.Off=Habilidades [[RED]]desactivadas
@@ -324,12 +324,12 @@ Commands.GodMode.Enabled=[[YELLOW]]mcMMO Modo Dios Activado
 Commands.GodMode.Forbidden=[mcMMO] No se permite Modo Dios en este mundo (Ver permisos)
 Commands.Inspect=<jugador> [[RED]]-Ver informaci\u00f3n detallada del jugador
 Commands.Invite.Accepted=[[GREEN]]Invitaci\u00f3n Aceptada. Te uniste al grupo {0}
-Commands.Invite.Success=[[GREEN]]Invitaci\u00f3n enviada Satisfactoriamente.
+Commands.Invite.Success=[[GREEN]]Invitaci\u00f3n enviada satisfactoriamente
 Commands.Leaderboards=<skill> <page> [[RED]]- Leaderboards
 Commands.mcgod=[[RED]]- Alternar Modo Dios
 Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - Modify target
 Commands.ModDescription=[[RED]]- Lea la descripci\u00f3n breve del mod
-Commands.NoConsole=This command does not support console usage.
+Commands.NoConsole=Este comando no es soportado desde la consola.
 Commands.Other=[[GREEN]]--OTROS COMANDOS--
 Commands.Party.Accept=[[RED]]- Aceptar invitaci\u00f3n al grupo
 Commands.Party.Chat.Off=S\u00f3lo chat de grupo [[RED]]desactivado
@@ -377,7 +377,7 @@ Party.IsLocked=[[RED]]\u00a1Este grupo ya est\u00e1 bloqueado!
 Party.IsntLocked=[[RED]]\u00a1Este grupo no est\u00e1 bloqueado!
 Party.Locked=[[RED]]El grupo est\u00e1 bloqueado, solo el l\u00edder puede invitarte
 Party.NotInYourParty=[[DARK_RED]]{0} no esta en tu fiesta
-Party.NotOwner=[[DARK_RED]]No eres el lider de la fiesta
+Party.NotOwner=[[DARK_RED]]No eres el due\u00f1o del grupo
 Party.PasswordSet=[[GREEN]]Contrase\u00f1a del grupo establecida: [[RED]]{0}
 Party.Player.Invalid=[[RED]]That is not a valid player.
 Party.Teleport.Dead=[[RED]]No te puedes teletransportar a un jugador muerto.
@@ -386,8 +386,8 @@ Party.Teleport.Player=[[GREEN]]Te teletransportaste a {0}.
 Party.Teleport.Target=[[GREEN]]{0} se teletransport\u00f3 a ti.
 Party.Unlocked=[[GRAY]]El grupo est\u00e1 desbloqueado
 Commands.XPGain.Acrobatics=Cayendo
-Commands.XPGain.Archery=Atacando Monstruos
-Commands.XPGain.Axes=Atacando Monstruos
+Commands.XPGain.Archery=Atacando a Monstruos
+Commands.XPGain.Axes=Atacando a Monstruos
 Commands.XPGain.Excavation=Excavar y encontrar tesoros
 Commands.XPGain.Fishing=Pesca (\u00a1Imag\u00ednate!)
 Commands.XPGain.Herbalism=Recolectando hierbas
@@ -395,7 +395,7 @@ Commands.XPGain.Mining=Minando Piedra y Minerales
 Commands.XPGain.Repair=Reparando
 Commands.XPGain.Swords=Atacando a Monstruos
 Commands.XPGain.Taming=Domando animales, o combatiendo con tus lobos
-Commands.XPGain.Unarmed=Atacando Monstruos
+Commands.XPGain.Unarmed=Atacando a Monstruos
 Commands.XPGain.WoodCutting=Talando \u00e1rboles
 Commands.XPGain=[[DARK_GRAY]]OBTENCI\u00d3N DE EXPERIENCIA: [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]Tu BARRA DE EXP esta bloqueada a {0}!
@@ -414,17 +414,17 @@ Guides.Acrobatics=[[DARK_AQUA]]About Acrobatics:\n[[YELLOW]]Acrobatics is the ar
 Guides.Archery=Gu\u00eda pr\u00f3ximamente...
 Guides.Axes=Gu\u00eda pr\u00f3ximamente...
 Guides.Excavation=[[DARK_AQUA]]Sobre Excavaci\u00f3n:\n[[YELLOW]]Es el acto de excavar tierra para encontrar tesoros.\n[[YELLOW]]Cuanto m\u00e1s haces esto mas tesoros puedes encontrar.\n[[DARK_AQUA]]Ganancia de Experiencia:\n[[YELLOW]]Para obtener EXP en esta habilidad necesitas usar una pala.\n[[YELLOW]]Solo ciertos materiales pueden ser excavados para\n[[YELLOW]]obtener tesoros y EXP.\n[[DARK_AQUA]]Materiales Compatibles:\n[[YELLOW]]Pasto, Tierra, Arena, Arcilla, Grava y Arena del Infierno.\n[[DARK_AQUA]]Como usar Ultra Taladro Destructor:\n[[YELLOW]]Con una pala en mano hacer click derecho para prepararla.\n[[YELLOW]]Cuando est\u00e1 en este estado tienes cerca de 4 segundos para\n[[YELLOW]]hacer contacto con un material compatible para activar\n[[YELLOW]]la habilidad Ultra Taladro Destructor.\n[[DARK_AQUA]]\u00bfQu\u00e9 es Ultra Taladro Destructor?\n[[YELLOW]]Ultra Taladro Destructor es una habilidad limitada\n[[YELLOW]]relacionada a la habilidad de Excavaci\u00f3n. Triplica la\n[[YELLOW]]probabilidad de encontrar tesoros y activa destrucci\u00f3n\n[[YELLOW]]instant\u00e1nea de materiales de Excavaci\u00f3n.\n[[DARK_AQUA]]\u00bfC\u00f3mo funciona Cazados de Tesoros?\n[[YELLOW]]Cada posible tesoro de Excavaci\u00f3n tiene su propio nivel de\n[[YELLOW]]habilidad requerida para obtenerla, como resultado de esto\n[[YELLOW]]es dif\u00edcil decir cuanto te ayuda esto.\n[[YELLOW]]Solo recuerda que cuanto mayor nivel tengas, m\u00e1s tesoros\n[[YELLOW]]encontrar\u00e1s. Y tambi\u00e9n recuerda que cada tipo de material\n[[YELLOW]]de Excavaci\u00f3n tiene su propia lista de tesoros.\n[[YELLOW]]En otras palabras, encontrar\u00e1s diferentes tesoros en\n[[YELLOW]]Tierra que los que encontrar\u00edas en Grava.\n[[DARK_AQUA]]Notas sobre Excavaci\u00f3n:\n[[YELLOW]]Los drops son completamente personalizables, as\u00ed que\n[[YELLOW]]los resultados var\u00edan de un servidor a otro.
-Guides.Fishing=Guide coming soon...
-Guides.Herbalism=Guide coming soon...
+Guides.Fishing=Gu\u00eda pr\u00f3ximamente...
+Guides.Herbalism=Gu\u00eda pr\u00f3ximamente...
 Guides.Mining=[[DARK_AQUA]]Sobre Miner\u00eda:\n[[YELLOW]]La miner\u00eda consiste en minar piedra y minerales. Provee\n[[YELLOW]]bonificaciones de cantidad de materiales cuando se mina.\n[[DARK_AQUA]]GANANCIA DE XP:\n[[YELLOW]]Para ganar XP, debes minar con un pico en tu mano.\n[[YELLOW]]Solo ciertos bloques bonifican XP.\n[[DARK_AQUA]]Materiales Compatibles:\n[[YELLOW]]Piedra, Carb\u00f3n, Hierro, Oro, Diamante, Redstone,\n[[YELLOW]]LapisLazuli, Obsidiana, Piedra Mohosa, Piedra del Fin,\n[[YELLOW]]Piedra Luminosa, y Piedra del Infierno.\n[[DARK_AQUA]]Como usar Super Destructor:\n[[YELLOW]]Con un pico en la mano, click derecho para prepararla.\n[[YELLOW]]Una vez preparada, tienes cerca de 4 segundos para hacer\n[[YELLOW]]contacto con materiales compatibles, el cual activara Super\n[[YELLOW]]Destructor.\n[[DARK_AQUA]]\u00bfQu\u00e9 es Super Destructor?\n[[YELLOW]]Super Destructor es una habilidad con un tiempo de reutili-\n[[YELLOW]]zaci\u00f3n vinculada a la habilidad de miner\u00eda.\n[[YELLOW]]Triplica tus chances de dropeo de items extras y activa la\n[[YELLOW]]destrucci\u00f3n instant\u00e1nea de materiales de Miner\u00eda.\n[[DARK_AQUA]]Como usar Miner\u00eda Explosiva:\n[[YELLOW]]Con un detonador en la mano, que es un encendedor,\n[[YELLOW]]click derecho en una TNT a la distancia. Esto causar\u00e1 que\n[[YELLOW]]la TNT explote instantaneamente.\n[[DARK_AQUA]]\u00bfC\u00f3mo funciona Miner\u00eda Explosiva?\n[[YELLOW]]Miner\u00eda Explosiva es una habilidad con un tiempo de reutili-\n[[YELLOW]]zaci\u00f3n vinculada a la habilidad de miner\u00eda.\n[[YELLOW]]Te da bonificaciones cuando se mina con TNT y te permite \n[[YELLOW]]detonar TNT remotamente. Hay tres partes de la Miner\u00eda\n[[YELLOW]]Explosiva. La primera son Grandes Bombas, que incrementa\n[[YELLOW]]el radio de explosi\u00f3n. La segunda Experto en Demolici\u00f3n,\n[[YELLOW]]que disminuye el da\u00f1o recibido por la explosi\u00f3n. La tercera\n[[YELLOW]]incrementa la cantidad de minerales obtenidos por TNT y\n[[YELLOW]]disminuye los escombros generados.
 Guides.Repair=Gu\u00eda pr\u00f3ximamente...
 Guides.Swords=Gu\u00eda pr\u00f3ximamente...
 Guides.Taming=Gu\u00eda pr\u00f3ximamente...
-Guides.Unarmed=Guide coming soon...
-Guides.Woodcutting=Guide coming soon...
+Guides.Unarmed=Gu\u00eda pr\u00f3ximamente...
+Guides.Woodcutting=Gu\u00eda pr\u00f3ximamente...
 Inspect.Offline=[[RED]]That player is offline, inspecting offline players is limited to Ops!
 Inspect.OfflineStats=Estad\u00edsticas de mcMMO para el Jugador Desconectado [[YELLOW]]{0}
-Inspect.Stats=[[GREEN]]mcMMO Stats for [[YELLOW]]{0}
+Inspect.Stats=[[GREEN]]Estad\u00edsticas de mcMMO para [[YELLOW]]{0}
 Inspect.TooFar=[[RED]]\u00a1Est\u00e1s demasiado lejos como para inspeccionar a ese jugador!
 Item.ChimaeraWing.Fail=**\u00a1LAS ALAS DE QUIMERA FALLARON!**
 Item.ChimaeraWing.Pass=**\u00a1ALAS DE QUIMERA!**
