--- a/src/main/resources/locale/locale_lv.properties
+++ b/src/main/resources/locale/locale_lv.properties
@@ -27,7 +27,7 @@ Archery.SkillName=ARCHERY
 Archery.Skillup=[[YELLOW]]Archery skill increased by {0}. Total ({1})
 Axes.Ability.Bonus.0=Axe Mastery
 Axes.Ability.Bonus.1=Bonus {0} boj\u0101jumi 
-Axes.Ability.Bonus.2=Ietekme
+Axes.Ability.Bonus.2=Impact
 Axes.Ability.Bonus.3=Deal {0} Bonus DMG to armor
 Axes.Ability.Bonus.4=Greater Impact
 Axes.Ability.Bonus.5=Deal {0} Bonus DMG to unarmored foes
@@ -88,16 +88,6 @@ Fishing.Listener=Zvejo\u0161ana:
 Fishing.MagicFound=[[GRAY]]You feel a touch of magic with this catch...
 Fishing.SkillName=FISHING
 Fishing.Skillup=[[YELLOW]]Fishing skill increased by {0}. Total ({1})
-Herbalism.Ability.0=Green Terra (ABILITY)
-Herbalism.Ability.1=Spread the Terra, 3x Drops
-Herbalism.Ability.2=Green Thumb (Wheat)
-Herbalism.Ability.3=Auto-Plants wheat when harvesting
-Herbalism.Ability.4=Green Thumb (Cobble/Stone Brick)
-Herbalism.Ability.5=Cobblestone/Stone Brick -> Mossy w/ Seeds
-Herbalism.Ability.6=Farmer\'s Diet
-Herbalism.Ability.7=Improves hunger restored from farmed foods
-Herbalism.Ability.8=Double Drops (All Herbs)
-Herbalism.Ability.9=Double the normal loot
 Herbalism.Ability.DoubleDropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}%
 Herbalism.Ability.FD=[[RED]]Farmers Diet: [[YELLOW]]Rank {0}
 Herbalism.Ability.GTe.Length=[[RED]]Green Terra Length: [[YELLOW]]{0}s
@@ -107,6 +97,16 @@ Herbalism.Ability.GTh.Stage=[[RED]]Green Thumb Stage: [[YELLOW]] Wheat grows in 
 Herbalism.Ability.GTh=[[GREEN]]**GREEN THUMB**
 Herbalism.Ability.Lower=[[GRAY]]**YOU LOWER YOUR HOE**
 Herbalism.Ability.Ready=[[GREEN]]**YOU READY YOUR HOE**
+Herbalism.Effect.0=Green Terra (ABILITY)
+Herbalism.Effect.1=Spread the Terra, 3x Drops
+Herbalism.Effect.2=Green Thumb (Wheat)
+Herbalism.Effect.3=Auto-Plants wheat when harvesting
+Herbalism.Effect.4=Green Thumb (Cobble/Stone Brick)
+Herbalism.Effect.5=Cobblestone/Stone Brick -> Mossy w/ Seeds
+Herbalism.Effect.6=Farmer\'s Diet
+Herbalism.Effect.7=Improves hunger restored from farmed foods
+Herbalism.Effect.8=Double Drops (All Herbs)
+Herbalism.Effect.9=Double the normal loot
 Herbalism.Listener=Herbalism:
 Herbalism.SkillName=HERBALISM
 Herbalism.Skills.GTe.Off=[[RED]]**Green Terra has worn off**
@@ -115,22 +115,22 @@ Herbalism.Skills.GTe.Refresh=[[GREEN]]Your [[YELLOW]]Green Terra [[GREEN]]abilit
 Herbalism.Skills.GTe.Other.Off=[[RED]]Green Terra[[GREEN]] has worn off for [[YELLOW]]{0}
 Herbalism.Skills.GTe.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Green Terra!
 Herbalism.Skillup=[[YELLOW]]Herbalism skill increased by {0}. Total ({1})
-Mining.Ability.0=Super Breaker (ABILITY)
-Mining.Ability.1=Speed+, Triple Drop Chance
-Mining.Ability.2=Double Drops
-Mining.Ability.3=Double the normal loot
-Mining.Ability.4=Blast Mining
-Mining.Ability.5=Bonuses to mining with TNT
-Mining.Ability.6=Bigger Bombs
-Mining.Ability.7=Increases TNT explosion radius
-Mining.Ability.8=Demolitions Expertise
-Mining.Ability.9=Decreases damage from TNT explosions
 Mining.Ability.Length=[[RED]]Super Breaker Length: [[YELLOW]]{0}s
 Mining.Ability.Locked.0=LOCKED UNTIL 125+ SKILL (BLAST MINING)
 Mining.Ability.Locked.1=LOCKED UNTIL 250+ SKILL (BIGGER BOMBS)
 Mining.Ability.Locked.2=LOCKED UNTIL 500+ SKILL (DEMOLITIONS EXPERTISE)
 Mining.Ability.Lower=[[GRAY]]**YOU LOWER YOUR PICKAXE**
 Mining.Ability.Ready=[[GREEN]]**YOU READY YOUR PICKAXE**
+Mining.Effect.0=Super Breaker (ABILITY)
+Mining.Effect.1=Speed+, Triple Drop Chance
+Mining.Effect.2=Double Drops
+Mining.Effect.3=Double the normal loot
+Mining.Effect.4=Blast Mining
+Mining.Effect.5=Bonuses to mining with TNT
+Mining.Effect.6=Bigger Bombs
+Mining.Effect.7=Increases TNT explosion radius
+Mining.Effect.8=Demolitions Expertise
+Mining.Effect.9=Decreases damage from TNT explosions
 Mining.Effect.Decrease=[[RED]]Demolitions Expert Damage Decrease: [[YELLOW]]{0}%
 Mining.Effect.DropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}%
 Mining.Listener=Mining:
@@ -237,7 +237,7 @@ Taming.Effect.12=Call of the Wild
 Taming.Effect.13=Summon an animal to your side
 Taming.Effect.14=[[GRAY]]COTW (Ocelot): Crouch and left-click with {0} Fish in hand
 Taming.Effect.15=[[GRAY]]COTW (Wolf): Crouch and left-click with {0} Bones in hand
-Taming.Effect.16=Fast Food Service
+Taming.Effect.16=\u0100tro \u0112dienu Pakalpojumi 
 Taming.Effect.17=Chance for wolves to heal on attack
 Taming.Effect.2=Gore
 Taming.Effect.3=Critical Strike that applies Bleed
@@ -395,7 +395,7 @@ Commands.XPGain.Mining=Mining Stone & Ore
 Commands.XPGain.Repair=Repairing
 Commands.XPGain.Swords=Attacking Monsters
 Commands.XPGain.Taming=Animal Taming, or combat w/ your wolves
-Commands.XPGain.Unarmed=Uzbr\u016bk Monstriem 
+Commands.XPGain.Unarmed=Attacking Monsters
 Commands.XPGain.WoodCutting=Koku cir\u0161ana
 Commands.XPGain=[[DARK_GRAY]]XP GAIN: [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]Your XP BAR is now locked to {0}!
@@ -420,7 +420,7 @@ Guides.Mining=[[DARK_AQUA]]About Mining:\n[[YELLOW]]Mining consists of mining st
 Guides.Repair=Guide coming soon...
 Guides.Swords=Guide coming soon...
 Guides.Taming=Guide coming soon...
-Guides.Unarmed=Dr\u012bzum\u0101 izn\u0101ks pam\u0101c\u012bba..
+Guides.Unarmed=Guide coming soon...
 Guides.Woodcutting=Guide coming soon...
 Inspect.Offline=[[RED]]That player is offline, inspecting offline players is limited to Ops!
 Inspect.OfflineStats=mcMMO Stats for Offline Player [[YELLOW]]{0}
